--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblioteca Virtual CECM JP</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
-        <div class="logo"> </div>
-        <ul>
-         <li></li>
-         <li></li>
-         <li></li>
-         <li></li>   
-        </ul>
+        <div class="nav__botao"></div>
+        <div class="nav__logo"></div>
     </nav>
+
+    <setion class="content"></setion>
+<footer></footer>
 </body>
 </html>
