--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         <div class="nav__logo"></div>
     </nav>
 
-    <setion class="content"></setion>
-<footer></footer>
+    <section class="content">
+        <div class="content__imagem"></div>
+        <div class="content__apresentacao"></div> 
+        
+    </setion>
+<div class="footer_titulo"></div>
+<div class="footer__"
+</footer>
 </body>
 </html>
