--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <div class="content__apresentacao"></div> 
         
     </setion>
+    <footer>
 <div class="footer_titulo"></div>
-<div class="footer__"
+<div class="footer_titulo"></div>
 </footer>
 </body>
 </html>
